--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,3 +1,3 @@
-DB_URI="mongodb+srv://chaubeyvineet48:Vr5UJqLPN7FjAGqW@cluster0.y7dd9dx.mongodb.net/?retryWrites=true&w=majority"
+DB_URI="mongodb+srv://chaubeyvineet48:Vr5UJqLPN7FjAGqW@cluster0.y7dd9dx.mongodb.net/"
 DB_NAME="LMS"
 SESSION_SECRET=mysecret
