--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start ng serve --host=0.0.0.0 --configuration=dev --disableHostCheck=true",
-    "build": "react-scripts build",
+    "build": "react-scripts build --disableHostCheck=true",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "prettier --write ."
